--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,51 @@
   color: #61dafb;
 }
 
+.login-container {
+  @apply max-w-[500px] max-h-[250px] p-5 border border-gray-400 rounded-lg bg-white;
+  /* max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: #fff; */
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-group {
+  margin-bottom: 10px;
+}
+
+label {
+  font-weight: bold;
+}
+
+input {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.button-green {
+  @apply cursor-pointer px-4 py-2 bg-green-500 text-white hover:bg-green-600 hover:text-white font-bold ;
+  /* padding: 8px 12px;
+  background-color: #4caf50;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer; */
+}
+
+
+.error-message {
+  color: red;
+  margin-top: 10px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
