--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@ input {
 }
 
 .button-green {
-  @apply cursor-pointer px-4 py-2 bg-green-500 text-white hover:bg-green-600 hover:text-white font-bold ;
+  @apply cursor-pointer px-4 py-2 bg-green-500 text-white hover:bg-green-600 hover:text-white;
   /* padding: 8px 12px;
   background-color: #4caf50;
   color: #fff;
