--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@
   margin-bottom: 10px;
 }
 
-.select-green-border {
+.select-dropdown {
   @apply w-full h-full border border-green-500 rounded;
 }
 
@@ -62,15 +62,14 @@ input {
 }
 
 .button-green {
-  @apply cursor-pointer px-4 py-2 bg-green-500 text-white hover:bg-green-600 hover:text-white;
-  /* padding: 8px 12px;
-  background-color: #4caf50;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer; */
+  @apply cursor-pointer px-4 py-2 bg-green-500 text-white hover:bg-green-600 font-bold hover:text-white;
+
 }
 
+.button-blue {
+  @apply cursor-pointer px-4 py-2 bg-blue-500 text-white hover:bg-blue-600 font-bold hover:text-white;
+
+}
 
 .error-message {
   color: red;
