--- a/src/App.css
+++ b/src/App.css
@@ -1,36 +1,36 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 .login-container {
-  @apply min-w-[400px] max-w-[600px] p-5 border border-gray-400 rounded-lg bg-white;
-  /* max-width: 400px;
+    @apply min-w-[400px] max-w-[600px] p-5 border border-gray-400 rounded-lg bg-white;
+    /* max-width: 400px;
   margin: 0 auto;
   padding: 20px;
   border: 1px solid #ccc;
@@ -39,50 +39,49 @@
 }
 
 .login-form {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 .form-group {
-  margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .select-dropdown {
-  @apply w-full h-full border border-green-500 rounded;
+    @apply w-full h-full border border-green-500 rounded;
 }
 
 label {
-  font-weight: bold;
+    font-weight: bold;
 }
 
-input, textarea {
-  padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+input,
+textarea {
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
 }
 
 .button-green {
-  @apply cursor-pointer px-4 py-2 bg-green-500 text-white hover:bg-green-600 font-bold hover:text-white;
-
+    @apply cursor-pointer px-4 py-2 bg-green-500 text-white hover:bg-green-600 font-bold hover:text-white;
 }
 
 .button-blue {
-  @apply cursor-pointer px-4 py-2 bg-blue-500 text-white hover:bg-blue-600 font-bold hover:text-white;
-
+    @apply cursor-pointer px-4 py-2 bg-blue-500 text-white hover:bg-blue-600 font-bold hover:text-white;
 }
 
 .error-message {
-  color: red;
-  margin-top: 10px;
+    color: red;
+    margin-top: 10px;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 textarea {
